--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^15.3.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
